--- a/app/views/email/otp.html
+++ b/app/views/email/otp.html
@@ -25,12 +25,12 @@
               text-decoration: none;
               font-weight: 600;
             "
-            >Semina</a
+            >Kerjain</a
           >
         </div>
         <p style="font-size: 1.1em">Hi,</p>
         <p>
-          Thank you for choosing Your Brand. Use the following OTP to complete
+          Thank you for choosing Kerjain for your homework. Use the following OTP to complete
           your Sign Up procedures.
         </p>
         <h2
@@ -45,7 +45,7 @@
         >
           {{otp}}
         </h2>
-        <p style="font-size: 0.9em">Regards,<br />Your Brand</p>
+        <p style="font-size: 0.9em">Regards,<br />Gilang</p>
         <hr style="border: none; border-top: 1px solid #eee" />
         <div
           style="
@@ -57,9 +57,9 @@
             font-weight: 300;
           "
         >
-          <p>Your Brand Inc</p>
-          <p>312312 BWA</p>
-          <p>Angga</p>
+          <p>Kerjain.online</p>
+          <p>Indonesia</p>
+          <p>admin@kerjain.com</p>
         </div>
       </div>
     </div>
